# mach

./: Cargo.toml
mach/: Cargo.toml
mach/src/: game.rs  lib.rs  proto.rs
mach/src/proto/: id.rs
mach_desktop/: Cargo.toml
mach_desktop/src/: main.rs
mach_server/: Cargo.toml  protocol.md
mach_server/src/: main.rs
