[package]
name = "mach_desktop"
authors = ["intrepidpig"]
version = "0.0.0"
edition = "2018"

[dependencies]
mach = { path = "../mach" }
tungstenite = "^0.10.1"
tokio-tungstenite = "^0.10.1"
tokio = { version = "^0.2.11", features = ["tcp", "rt-threaded", "macros", "stream"] }
futures = "0.3"
log = "0.4.8"
fern = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
json = { version = "1.0", package = "serde_json" }